--- a/lab02/skier-bio.html
+++ b/lab02/skier-bio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE <html>
 
 <html>
     <head>
@@ -10,14 +10,12 @@
         <h1>Rebecca Skier's Biography</h1>
        <p>My name is Rebecca Skier and my majors are Information Management with a concentration in web design, and Graphic Design. I am excited for this combination of majors as I am interested in UX/UI design, and together these programs will teach me both the creative and technological parts of web design. Here at Syracuse University I am a <strong>SUccess scholar</strong>, that is hard working and reliable.
         </p>
-        <p>
     I am experienced in:
     <ul>
         <li>Adobe Illustrator</li>
         <li>InDesign</li> 
         <li>Photoshop</li>
         </ul>
-        </p>
 
        
         <h2>Personal Info</h2>
