--- a/lab05/skier-bio3.html
+++ b/lab05/skier-bio3.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <img src="../../fileimages/rskier_banner.jpg" alt="banner">
+        <img src="../images/rskier_banner.jpg" alt="banner">
         <h1>Rebecca Skier's Biography</h1>
        <p>My name is Rebecca Skier and my majors are Information Management with a concentration in web design, and Graphic Design. I am excited for this combination of majors as I am interested in UX/UI design, and together these programs will teach me both the creative and technological parts of web design. Here at Syracuse University I am a <strong>SUccess scholar</strong>, that is hard working and reliable.
         </p>
